fixed whiteboarding and wireframing bar

--- a/index.html
+++ b/index.html
@@ -299,20 +299,20 @@
 								<h5>
 									Management Skills
 								</h5>
-								<div class="meter emerald">
-									<span style="width: 100%"><span>SCRUM</span></span>
-								</div>
 								<div class="meter carrot">
-									<span style="width: 100%"><span>Git</span></span>
-								</div>
-								<div class="meter wisteria">
-									<span style="width: 900%"><span>Whiteboarding</span></span>
+									<span style="width: 90%"><span>SCRUM</span></span>
 								</div>
 								<div class="meter sunflower">
-									<span style="width: 900%"><span>Wireframing</span></span>
+									<span style="width: 100%"><span>Git</span></span>
+								</div>
+								<div class="meter pomengrate">
+									<span style="width: 90%"><span>Whiteboarding</span></span>
 								</div>
 								<div class="meter asbestos">
-									<span style="width: 90%"><span>Project Management</span></span>
+									<span style="width: 80%"><span>Wireframing</span></span>
+								</div>
+								<div class="meter wisteria">
+									<span style="width: 100%"><span>Project Management</span></span>
 								</div>
 								<div class="break"></div>
 								<h5>
