moved twitter to contact section, added instagram, and changed icons to reflect social media

--- a/index.html
+++ b/index.html
@@ -28,8 +28,6 @@
 <!--[if lt IE 7]>
 	<p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
 	<![endif]-->
-	<div class="message">My <a target="_blank" href="https://github.com/cleong14">GitHub</a>
-</div>
    <div class="main-container">
 	<div class="main wrapper clearfix">
 	  <!-- Header Start -->
@@ -56,10 +54,10 @@
 				</li>
 				<!-- <li class='tab'>
 				  <a href="#portfolio"><i class="icon-heart"></i><span> Portfolio</span></a>
-				</li>
+				</li> -->
 				<li class='tab'>
 				  <a href="#contact"><i class="icon-envelope"></i><span> Contact</span></a>
-				</li> -->
+				</li>
 			</ul>
 		  <!-- End Tab List -->
 			<div id="tab-data-wrap">
@@ -90,10 +88,10 @@
 									</li>
 									<!-- <li>
 										<a href="#portfolio">My Portfolio</a>
-									</li>
+									</li> -->
 									<li>
 										<a href="#contact">Contact Me</a>
-									</li> -->
+									</li>
 								</ul>
 							</div>
 						</div>
@@ -102,7 +100,7 @@
 						  <div class="g1">
 								<div class="item-box clearfix">
 								  <div class="item-data">
-									<h3><a href="mailto:cleong14@gmail.com">E-Mail</a></h3>
+									<h3><a href="https://github.com/cleong14">GitHub</a></h3>
 									<!-- <p>Email Address</p> -->
 								  </div>
 								</div>
@@ -112,14 +110,6 @@
 								  <div class="item-data">
 									<h3><a href="https://www.linkedin.com/in/cleong14">LinkedIn</a></h3>
 									<!-- <p>LinkedIn Profile</p> -->
-								  </div>
-								</div>
-						  </div>
-						  <div class="g1">
-								<div class="item-box clearfix">
-								  <div class="item-data">
-									<h3><a href="http://twitter.com/cleong14">Twitter</a></h3>
-									<!-- <p>Twitter</p> -->
 								  </div>
 								</div>
 						  </div>
@@ -426,45 +416,45 @@
 				</div> -->
 			  <!-- End Portfolio Data -->
 			  <!-- Contact Tab Data -->
-				<!-- <div id="contact">
+				<div id="contact">
 					<section class="clearfix">
 					   <div class="g1">
-						 <div class="sny-icon-box">
-						   <div class="sny-icon">
-							  <i class="icon-globe"></i>
-							</div>
-							<div class="sny-icon-content">
-							  <h4>E-Mail</h4>
-							  <p>cleong14@gmail.com</p>
-							</div>
-						 </div>
+							 <div class="sny-icon-box">
+							   <div class="sny-icon">
+								  <i class="icon-globe"></i>
+								</div>
+								<div class="sny-icon-content">
+								  <h4>E-Mail</h4>
+								  <p><a href="mailto:cleong14@gmail.com">cleong14@gmail.com</a></p>
+								</div>
+							 </div>
 					   </div>
 					   <div class="g1">
-						 <div class="sny-icon-box">
-						   <div class="sny-icon">
-							  <i class="icon-phone"></i>
-							</div>
-							<div class="sny-icon-content">
-							  <h4>Mobile Number</h4>
-							  <p>999-9999-999<br/>999-1112-999</p>
-							</div>
-						 </div>
+							 <div class="sny-icon-box">
+							   <div class="sny-icon">
+								  <i class="icon-phone"></i>
+								</div>
+								<div class="sny-icon-content">
+								  <h4>Twitter</h4>
+								  <p><a href="http://twitter.com/cleong14">@cleong14</a></p>
+								</div>
+							 </div>
 					   </div>
 					   <div class="g1">
-						 <div class="sny-icon-box">
-						   <div class="sny-icon">
-							  <i class="icon-user"></i>
-							</div>
-							<div class="sny-icon-content">
-							  <h4>About Me</h4>
-							  <p>I love to work, so don't be shy, i am just an email away.</p>
-							</div>
-						 </div>
+							 <div class="sny-icon-box">
+							   <div class="sny-icon">
+								  <i class="icon-user"></i>
+								</div>
+								<div class="sny-icon-content">
+								  <h4>Instagram</h4>
+								  <p><a href="http://instagram.com/cleong14">@cleong14</a></p>
+								</div>
+							 </div>
 					   </div>
 					   <div class="break"></div>
 					   
 					</section>
-				</div> -->
+				</div>
 			  <!-- End Contact Data -->
 			</div>
 		</div>
